syntax = "proto3";
package zlog_pb;
option go_package="./zlog_pb";

message Default_REQ{} // 默认请求
message Default_RES {
    uint32 code = 1;  // 服务状态码 约定: 1 表示成功, 其它数字根据业务进行返回
}

message LogKV_REQ{
    string key      = 1; // 存储键
    string value    = 2; // 存储值
    int64  saveTime = 3; // 存储时间
    string service  = 4; // 服务
}

service zlog{
    rpc AddLogKV(LogKV_REQ) returns(Default_RES);// 添加键值对日志日志
}